2.服务提供者 Eureka + 服务消费者（rest + Ribbon)

--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,8 @@ subprojects {
     dependencies {
         compile(
                 'org.springframework.boot:spring-boot-starter-web',
-                'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+                'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server',
+                'org.springframework.cloud:spring-cloud-starter-netflix-ribbon'
         )
 
         testCompile('org.springframework.boot:spring-boot-starter-test')
