--- a/spring-cloud-eureka-client-2/build.gradle
+++ b/spring-cloud-eureka-client-2/build.gradle
@@ -1,3 +1,10 @@
 group 'com.gyq'
 version '1.0-SNAPSHOT'
 
+dependencies {
+    compile(
+            'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server',
+            'org.springframework.boot:spring-boot-starter-actuator',
+            'org.springframework.cloud:spring-cloud-starter-netflix-hystrix',
+    )
+}
