--- a/spring-cloud-eureka-server/build.gradle
+++ b/spring-cloud-eureka-server/build.gradle
@@ -1,3 +1,8 @@
 group 'com.gyq'
 version '1.0-SNAPSHOT'
 
+dependencies {
+    compile(
+            'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server',
+    )
+}
