--- a/spring-cloud-ribbon-consumer-hystrix-dashboard/build.gradle
+++ b/spring-cloud-ribbon-consumer-hystrix-dashboard/build.gradle
@@ -4,7 +4,10 @@ version '1.0-SNAPSHOT'
 dependencies {
     compile(
             'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server',
+            'org.springframework.cloud:spring-cloud-starter-netflix-hystrix-dashboard',
             'org.springframework.boot:spring-boot-starter-actuator',
             'org.springframework.cloud:spring-cloud-starter-netflix-hystrix',
+            // 监控集群
+            'org.springframework.cloud:spring-cloud-starter-netflix-turbine'
     )
 }
