--- a/spring-cloud-ribbon-consumer-hystrix/build.gradle
+++ b/spring-cloud-ribbon-consumer-hystrix/build.gradle
@@ -3,8 +3,7 @@ version '1.0-SNAPSHOT'
 
 dependencies {
     compile(
-            'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server',
-            'org.springframework.boot:spring-boot-starter-actuator',
             'org.springframework.cloud:spring-cloud-starter-netflix-hystrix',
+            'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
     )
 }
