--- a/spring-cloud-feign-consumer-hystrix/src/main/resources/application.yml
+++ b/spring-cloud-feign-consumer-hystrix/src/main/resources/application.yml
@@ -9,6 +9,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8760/eureka/
+#  instance:
+#    preferIpAddress: true
 
 feign:
   hystrix:
