5. 服务网关 zuul 快速入门

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
 
 allprojects {
     ext {
-        springCloudVersion = 'Finchley.M9'
+        springCloudVersion = 'Finchley.RC1'
         springCloudStreamVersion = 'Elmhurst.RC3'
     }
 }
