6.服务网关 Zuul Filter 使用

--- a/spring-cloud-api-gateway/src/main/resources/application.yml
+++ b/spring-cloud-api-gateway/src/main/resources/application.yml
@@ -12,6 +12,9 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8760/eureka/
 
+ribbon:
+  ConnectTimeout: 3000
+  ReadTimeout: 3000
 #zuul:
 #  routes:
 #    bd:
